# betterbros-props

./: .env.example  .gitignore  AUTH_IMPLEMENTATION_SUMMARY.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DECISIONS.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_TRACKER.md  DOCKER_SETUP.md  GIT_SETUP.md  INGESTION_LAYER_SUMMARY.md  Makefile  NEON_LOGO_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_RUN.md  STATS_REFERENCE.md  TECH_STACK.md  package.json  pnpm-lock.yaml  requirements.txt
apps/api/: .env.example  .gitignore  API_ENDPOINTS.md  ARCHITECTURE.md  DATABASE.md  DATABASE_IMPLEMENTATION.md  DB_QUICK_REFERENCE.md  Dockerfile  README.md  README_DATABASE.md  SETUP_COMPLETE.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  simple_main.py  verify_correlation_system.py
apps/api/alembic/: env.py
apps/api/scripts/: db_migrate.py  start.sh  test.sh  test_auth_setup.py
apps/api/src/: __init__.py  config.py  db.py  types.py
apps/api/src/auth/: README.md  clerk.py  deps.py  supabase.py
apps/api/src/corr/: ARCHITECTURE.md  INSTALLATION.md  QUICKSTART.md  README.md  SUMMARY.md  __init__.py  constraints.py  copula.py  correlation.py  example_usage.py  sampler.py
apps/api/src/db/: __init__.py  models.py  schemas.py  session.py
apps/api/src/eval/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  __init__.py  backtest.py  calibration_monitor.py  example_usage.py  metrics.py  reports.py  (+1 more)
apps/api/tests/: __init__.py  conftest.py  test_db.py  test_health.py  test_models.py
(+195 files in other folders)
